Fix GUI not closing cause of graphstream and upgrade it to javafx 2.0.