@@ -1,6 +1,6 @@
 plugins {
 	id 'application'
-	id 'org.openjfx.javafxplugin' version '0.0.8'
+	id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 application {
@@ -8,76 +8,36 @@ application {
 	applicationDefaultJvmArgs = ["-Xss1024m", "-Xmx8g"]
 }
 
-//run {
-//	doFirst {
-//		jvmArgs = [
-//				'--module-path', classpath.asPath,
-//				'--add-modules="javafx.controls,javafx.swing"'
-//		]
-//	}
-//}
-
-//compileJava {
-//	doFirst {
-//		options.compilerArgs = [
-//				'--module-path', classpath.asPath,
-//				'--add-modules', 'javafx.controls,javafx.swing'
-//		]
-//	}
-//}
-
 javafx {
-	version = "13.0.1"
-	modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.swing']
+	version = "12"
+	modules = [ 'javafx.controls' ]
 }
 
 dependencies {
-	implementation 'org.graphstream:gs-core:1.3'
-	implementation 'org.graphstream:gs-algo:1.3'
-	implementation 'org.graphstream:gs-ui:1.3'
-
-//	implementation group: 'org.openjfx', name: 'javafx', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-base', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-controls', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-graphics', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-swing', version: '13.0.1'
-//
-//	runtimeOnly "org.openjfx:javafx-base:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-base:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-base:13.0.1:mac"
-//
-//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:mac"
-//
-//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:mac"
-//
-//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:mac"
+	implementation 'org.graphstream:gs-core:2.0'
+	implementation 'org.graphstream:gs-algo:2.0'
+	implementation 'org.graphstream:gs-ui-javafx:2.0'
 
 	implementation project(':ecco-service')
 	implementation files('../adapter/java-patched/at.jku.cdl.ecco.adapter.java-patched.jar')
 
-
-
 	runtimeOnly project(':ecco-adapter-file')
 	runtimeOnly project(':ecco-adapter-text')
 	runtimeOnly project(':ecco-adapter-image')
-	runtimeOnly project(':ecco-adapter-java')
+//	runtimeOnly project(':ecco-adapter-java')
+//	runtimeOnly project(':ecco-adapter-lilypond')
 
 
-	// the following should be "testRuntimeOnly". however, javafx seems to mess up these dependencies for the entire project.
-	testImplementation project(':ecco-adapter-file')
-	testImplementation project(':ecco-adapter-text')
-	testImplementation project(':ecco-adapter-image')
-	testImplementation project(':ecco-adapter-java')
+	testRuntimeOnly project(':ecco-adapter-file')
+	testRuntimeOnly project(':ecco-adapter-file')
+	testRuntimeOnly project(':ecco-adapter-text')
+	testRuntimeOnly project(':ecco-adapter-image')
+//	testRuntimeOnly project(':ecco-adapter-java')
 
-	testImplementation project(':ecco-adapter-challenge')
-	testImplementation project(':ecco-adapter-runtime')
-	testImplementation project(':ecco-adapter-cpp')
+	testRuntimeOnly project(':ecco-adapter-challenge')
+	testRuntimeOnly project(':ecco-adapter-runtime')
+	testRuntimeOnly project(':ecco-adapter-cpp')
+//	testRuntimeOnly project(':ecco-adapter-lilypond')
 }
 
 ospackage {
@@ -117,5 +77,9 @@ windowsZip {
 task copyScripts(type: Copy) {
 	from 'ecco-gui', 'ecco-gui.bat'
 	into project.file('build/bundle/')
+}
+
+repositories {
+	mavenCentral()
 }
 bundle.dependsOn += copyScripts
